--- a/.github/workflows/gh-task-runner-Large-Suite.yml
+++ b/.github/workflows/gh-task-runner-Large-Suite.yml
@@ -171,7 +171,7 @@ jobs:
     runs-on: 
       - ${{ github.event.inputs.backend }}
       - gpu-vram-${{ github.event.inputs.gpu_vram }}
-      - ${{ matrix.gpu_count }}
+      # - gpu-count-any
 
     # Actual task setup, and run steps
     steps:
