--- a/.github/workflows/gh-task-runner-Slow-Suite.yml
+++ b/.github/workflows/gh-task-runner-Slow-Suite.yml
@@ -190,99 +190,21 @@ jobs:
     runs-on: 
       - ${{ github.event.inputs.backend }}
       - gpu-vram-${{ github.event.inputs.gpu_vram }}
-      - ${{ matrix.gpu_count }}
+      - gpu-count-8
 
     # Actual task setup, and run steps
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: nvidia-smi check (for easy debugging)
-        run: nvidia-smi
-
-      - uses: actions/setup-python@v5
+      - name: Run the task
+        uses: ./.github/actions/gh-task-runner-composite
         with:
-          python-version: '3.11' 
-          
-      - name: Install dependencies / setup project
-        run: |
-          # Basic dependencies install, and output setup
-          mkdir -p ./output
-          python -m pip install .
-          python -m pip install -e .
-
-          # Needed for ifeval
-          python -m pip install langdetect immutabledict
-
-          # Setup HF cache
-          chmod +x ./gh-task-runner/*.sh
-          ./gh-task-runner/hf-cache-setup.sh 
-
-      - name: Run Task
-        run: |
-          # Run it
-          echo "# ------------------------------"
-          echo "# Running Task ...."
-          echo "# ------------------------------"
-
-          # Get the final task to run
-          task_to_run=${{ matrix.run_task }}
-
-          # Check if the few shot setting is larger or euqal to 0
-          if [ ${{ github.event.inputs.num_fewshot }} -ge 0 ]; then
-            # Fail on pipe error
-            set -o pipefail
-
-            # Run it
-            accelerate launch -m lm_eval --model hf \
-            --model_args pretrained=${{ github.event.inputs.model_hf_repo }},${{ github.event.inputs.model_args }} \
-            --tasks $task_to_run \
-            --batch_size ${{ github.event.inputs.batch_size }} \
-            --num_fewshot ${{ github.event.inputs.num_fewshot }} \
-            --log_samples --output_path ./output 2>&1 | tee -a ./output/taskrun.log
-          else
-            # Fail on pipe error
-            set -o pipefail
-
-            # Run it
-            accelerate launch -m lm_eval --model hf \
-            --model_args pretrained=${{ github.event.inputs.model_hf_repo }},${{ github.event.inputs.model_args }} \
-            --tasks $task_to_run \
-            --batch_size ${{ github.event.inputs.batch_size }} \
-            --log_samples --output_path ./output 2>&1 | tee -a ./output/taskrun.log
-          fi
-
-      ########################################################################
-      # We disable HF upload for large runs, as it WILL hit the rate limits
-      ########################################################################
-      # - name: Upload outputs to HF
-      #   if: always()
-      #   run: |
-      #     CLEANED_TASK=$(echo "${{ matrix.run_task }}" | sed 's/\*/_/g')
-      #     HF_SUBDIR_PATH="${{ env.MODEL_HF_REPO }}/$CLEANED_TASK/${{ github.event.inputs.model_args }}-num_fewshot=${{ github.event.inputs.num_fewshot }}/${{ github.event.inputs.backend }}/"
-      #     ./gh-task-runner/hf-upload-runner.sh "${{ env.HF_REPO_SYNC }}" "$HF_SUBDIR_PATH" "./output"
-
-      ########################################################################
-      # Instead we adjust the format for GH-Upload
-      ########################################################################
-      - name: Change to GH-Upload format
-        if: always()
-        run: |
-          CLEANED_TASK=$(echo "${{ matrix.run_task }}" | sed 's/\*/_/g')
-          HF_SUBDIR_PATH="${{ env.MODEL_HF_REPO }}/$CLEANED_TASK/${{ github.event.inputs.model_args }}-num_fewshot=${{ github.event.inputs.num_fewshot }}/${{ github.event.inputs.backend }}/"
-          
-          # Move the files
-          mkdir -p "./gh-upload/$HF_SUBDIR_PATH"
-          mv ./output/* "./gh-upload/$HF_SUBDIR_PATH"
-
-      - name: Save output Files
-        uses: actions/upload-artifact@v3
-        # if: failure()
-        if: always()
-        with:
-          name: output-files
-          path: |
-            gh-upload/*
-          retention-days: 90
-
+          run_task: ${{ matrix.run_task }}
+          num_fewshot: ${{ github.event.inputs.num_fewshot }}
+          model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
+          model_args: ${{ github.event.inputs.model_args }}
+          batch_size: ${{ github.event.inputs.batch_size }}
+          upload_to_hf: false
+      
       
