--- a/.github/workflows/gh-task-runner-Large-Suite.yml
+++ b/.github/workflows/gh-task-runner-Large-Suite.yml
@@ -62,7 +62,7 @@ env:
   HUGGING_FACE_HUB_TOKEN: ${{secrets.HUGGING_FACE_HUB_TOKEN}}
 
 jobs:
-  gh-task-runner-large-suite-1:
+  gh-task-runner:
 
     # Check for approval notice
     if: ${{ github.event.inputs.approval_notice == 'APPROVED' }}
@@ -187,5 +187,19 @@ jobs:
           model_args: ${{ github.event.inputs.model_args }}
           batch_size: ${{ github.event.inputs.batch_size }}
           # upload_to_hf: False
-      
-      
+
+  upload_to_hf:
+    name: "Upload to Hugging Face"
+    needs: gh-task-runner
+    runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.upload_to_hf }}
+    steps:
+      - name: Run the task
+        uses: ./.github/actions/gh-task-runner-composite
+        with:
+          num_fewshot: ${{ github.event.inputs.num_fewshot }}
+          model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
+          model_args: ${{ github.event.inputs.model_args }}
+          batch_size: ${{ github.event.inputs.batch_size }}
+          backend: ${{ github.event.inputs.backend }}
+          
