--- a/.github/workflows/gh-task-runner-Single.yml
+++ b/.github/workflows/gh-task-runner-Single.yml
@@ -1761,8 +1761,10 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.upload_to_hf }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Run the task
-        uses: ./.github/actions/gh-task-runner-composite
+        uses: ./.github/actions/gh-upload-to-hf
         with:
           run_task: ${{ github.event.inputs.custom_task || github.event.inputs.run_task }}
           num_fewshot: ${{ github.event.inputs.num_fewshot }}
