--- a/.github/workflows/gh-task-runner-Alignment.yml
+++ b/.github/workflows/gh-task-runner-Alignment.yml
@@ -50,7 +50,7 @@ on:
       upload_to_hf:
         description: 'Upload to Hugging Face'
         required: false
-        default: true
+        default: false
         type: boolean
 
 env:
