promoting known fixed tests in error suiute

--- a/.github/workflows/gh-task-runner-Large-Suite.yml
+++ b/.github/workflows/gh-task-runner-Large-Suite.yml
@@ -92,6 +92,9 @@ jobs:
           ### Faster tasks (<= 15 mins on 4x3090)
           ### ----------------------------------------------------------------------------
 
+          - arithmetic_*
+          - asdiv
+          
           - anli
           # - anli_*
           - ai2_arc
