--- a/.github/actions/gh-task-runner-composite/action.yaml
+++ b/.github/actions/gh-task-runner-composite/action.yaml
@@ -54,6 +54,8 @@ runs:
 
         # Needed for ifeval
         python -m pip install langdetect immutabledict 
+        # Needed for some models
+        python -m pip install einops
 
         # Setup HF cache
         chmod +x ./gh-task-runner/*.sh
