Update collection set in workflow

--- a/.github/workflows/gh-task-runner-Slow-Suite.yml
+++ b/.github/workflows/gh-task-runner-Slow-Suite.yml
@@ -115,7 +115,9 @@ jobs:
           # - wmt14-*
           - wmt16
           # - wmt16-*
-          - math_word_problems
+
+          # # This is a collection set (can skip)
+          # - math_word_problems
           
 
 
