Add mmlu with different fewshot options

--- a/.github/workflows/gh-task-runner-Few-Shot.yml
+++ b/.github/workflows/gh-task-runner-Few-Shot.yml
@@ -80,8 +80,8 @@ jobs:
           - arc_challenge
           - hellaswag
           - truthfulqa_mc2
-          - mmlu
           - winogrande
+          # - mmlu
           # - kmmlu_*
 
         num_fewshot:
@@ -90,6 +90,16 @@ jobs:
           - 5
           - 10
           - 25
+          
+      include:
+        # Include mmlu with < 10 fewshot
+        # As it does not work with > 5 fewshot
+        - run_task: mmlu
+          num_fewshot: 1
+        - run_task: mmlu
+          num_fewshot: 2
+        - run_task: mmlu
+          num_fewshot: 5
           
     # Name of the job
     name: "[${{ matrix.run_task }} - fs:${{ matrix.num_fewshot }}] ${{ github.event.inputs.model_hf_repo }} - ${{ github.event.inputs.model_args }}"
