--- a/.github/workflows/gh-task-runner-Few-Shot.yml
+++ b/.github/workflows/gh-task-runner-Few-Shot.yml
@@ -43,8 +43,8 @@ on:
         - 40
         - 48
         - 80
-      upload_to_hf:
-        description: 'Upload to Hugging Face'
+      upload_output:
+        description: 'Upload to HF / B2'
         required: false
         default: true
         type: boolean
@@ -127,18 +127,18 @@ jobs:
           model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
           model_args: ${{ github.event.inputs.model_args }}
           batch_size: ${{ github.event.inputs.batch_size }}
-          # upload_to_hf: False
+          # upload_output: False
 
-  upload_to_hf:
-    name: "Upload to Hugging Face"
+  upload_output:
+    name: "Upload to HF / B2"
     needs: gh-task-runner
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.upload_to_hf }}
+    if: ${{ github.event.inputs.upload_output }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Run the task
-        uses: ./.github/actions/gh-upload-to-hf
+        uses: ./.github/actions/gh-upload-output
         with:
           num_fewshot: ${{ github.event.inputs.num_fewshot }}
           model_hf_repo: ${{ github.event.inputs.model_hf_repo }}
