--- a/.github/workflows/gh-task-runner-XLang.yml
+++ b/.github/workflows/gh-task-runner-XLang.yml
@@ -62,6 +62,8 @@ env:
 
   # Secrets
   HUGGING_FACE_HUB_TOKEN: ${{secrets.HUGGING_FACE_HUB_TOKEN}}
+  B2_APPLICATION_KEY_ID: ${{secrets.B2_APPLICATION_KEY_ID}}
+  B2_APPLICATION_KEY: ${{secrets.B2_APPLICATION_KEY}}
 
 jobs:
   gh-task-runner:
