fixing b2 output-files dir

--- a/.github/actions/gh-upload-output/action.yaml
+++ b/.github/actions/gh-upload-output/action.yaml
@@ -46,6 +46,7 @@ runs:
         
     - uses: actions/download-artifact@v2
       with:
+        name: output-files
         path: ./upload
 
     - name: Upload to backblaze
