--- a/.github/workflows/gh-task-runner-Single.yml
+++ b/.github/workflows/gh-task-runner-Single.yml
@@ -1749,6 +1749,7 @@ jobs:
 
       - name: Run the task
         uses: ./.github/actions/gh-task-runner-composite
+        continue-on-error: true
         with:
           run_task: ${{ github.event.inputs.custom_task || github.event.inputs.run_task }}
           num_fewshot: ${{ github.event.inputs.num_fewshot }}
