--- a/.github/workflows/gh-b2-to-hf-sync.yml
+++ b/.github/workflows/gh-b2-to-hf-sync.yml
@@ -64,4 +64,23 @@ jobs:
         if: steps.cache-hf-repo.outputs.cache-hit == 'true'
         run: |
           cd lm-eval-output && git reset --hard && git pull
+
+      - name: Sync files from B2
+        run: |
+          cd lm-eval-output
+          b2 sync --skipNewer $B2_PATH_LM_EVAL_OUTPUT ./lm-eval-output
+      
+      - name: Huggingface CLI login
+        shell: bash
+        run: |
+          huggingface-cli login --token $HUGGING_FACE_HUB_TOKEN --add-to-git-credential
+
+      - name: Commit and push changes
+        run: |
+          cd lm-eval-output
+          git config --global user.email "devops@rwkv.com"
+          git config --global user.name "rwkv-x-dev"
+          git add . && git commit -m "[GHA] Auto-sync from B2"
+          git push
+          
         
