--- a/.github/workflows/gh-b2-to-hf-sync.yml
+++ b/.github/workflows/gh-b2-to-hf-sync.yml
@@ -36,7 +36,38 @@ jobs:
 
     # Actual task setup, and run steps
     steps:
+      # Get and log the free space
+      - name: Get system free space (Before reclaim)
+        run: |
+          echo "Free space:"
+          df -h
       
+      # Due to the docker image being > available space on the runner
+      # we need to do some optimization, to create more space.
+      # https://github.com/marketplace/actions/disk-space-reclaimer
+      # https://stackoverflow.com/questions/76294509/github-actions-docker-service-container-25gb-cannot-be-loaded
+      - name: Maximize build space
+        uses: insightsengineering/disk-space-reclaimer@v1
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tools-cache: true
+
+          # all of these default to true, but feel free to set to
+          # "false" if necessary for your workflow
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+          docker-images: true
+      
+      # Get and log the free space
+      - name: Get system free space (After reclaim)
+        run: |
+          echo "Free space:"
+          df -h
+
       - name: Install dependencies / setup project
         shell: bash
         run: |
@@ -55,12 +86,12 @@ jobs:
           # key: huggingface/rwkv-x-dev/lm-eval-output/hash-${{ steps.current-date.outputs.date }}
           restore-keys: huggingface/rwkv-x-dev/lm-eval-output/hash-
 
-      - name: Clone Hugging Face repository
+      - name: EITHER - Clone Hugging Face repository
         if: steps.cache-hf-repo.outputs.cache-hit != 'true'
         run: |
           git clone https://huggingface.co/datasets/rwkv-x-dev/lm-eval-output lm-eval-output
 
-      - name: Pull latest changes
+      - name: OR - Pull latest changes from Hugging Face
         if: steps.cache-hf-repo.outputs.cache-hit == 'true'
         run: |
           cd lm-eval-output && git reset --hard && git pull
