--- a/.github/workflows/gh-task-runner-Few-Shot.yml
+++ b/.github/workflows/gh-task-runner-Few-Shot.yml
@@ -124,6 +124,7 @@ jobs:
 
       - name: Run the task
         uses: ./.github/actions/gh-task-runner-composite
+        continue-on-error: true
         with:
           run_task: ${{ matrix.run_task }}
           num_fewshot: ${{ matrix.num_fewshot }}
