--- a/.github/workflows/gh-task-runner-XLang.yml
+++ b/.github/workflows/gh-task-runner-XLang.yml
@@ -91,6 +91,7 @@ jobs:
           - xwinograd
           # - xwinograd_*
           - lambada_multilingual
+          # - lambada_openai_*
           - pawsx
           # - paws_*
 
